--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     </head>
     <body>
-         <h1> Re:coded Gaziatnep Bootcamp </h1>
+         <h1> Ree:coded Gaziatnep Bootcamp </h1>
          <h2> CLT & git basics </h2>
          <p> Some simple basics</p>
          <ul>
